# pphysics

./: CHANGE.txt  LICENSE  README.md  setup.cfg  setup.py
docs/: class.html  func.html  index.html  installation.html  var.html
docs/class/: event.html  friction.html  gameObject.html  object.html  screen.html  vector.html  world.html
docs/style/: style.css
docs/video/: video.mov
pyphysics/: __init__.py
src/pphysics/: __init__.py  force.py
tests/: simple_game.py
