[metadata]
name = pphysics
version = 1.0.1
author = James H. Lasker
author_email = jameshlasker@gmail.com
description = Package pphysics to use physics in pygame.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/nhatnguyenjhl/pyphysics
project_usls = 
        Source: github.com/nhatnguyenjhl/pyphysics/tree/main/pyphysics
classifiers = 
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[command]
option = value
