[metadata]
name = pphysics
version = 1.1.1
author = James H. Lasker
author_email = jameshlasker@gmail.com
maintainer = James H. Lasker
maintainer_email = jameshlasker@gmail.com
license = MIT License
license-file = LICENSE
description = Package pphysics to use physics in pygame.
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://nhatnguyenjhl.github.io
project_usls = 
        Source Code = https://github.com/nhatnguyenjhl/pyphysics/tree/main/pphysics
        Documentation = https://nhatnguyenjhl.github.io/pphysics 
classifiers = 
        License :: OSI Approved :: MIT License
        Topic :: Software Development :: Libraries :: Python Modules
        Operating System :: OS Independent
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
requires-dist = setuptools
keywords = 
        physics
        pyphysics
        pygame
        jameshlasker
        standard
        federation


[options]
zip_safe = False
install_requires=
        pygame>=2.1.0
package_dir = 
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[command]
option = value

